ปรับโค้ด schematic_map_full.html

--- a/assets/server/schematic_map_full.html
+++ b/assets/server/schematic_map_full.html
@@ -36,9 +36,9 @@
 </head>
 
 <body>
-<div style="position: fixed">
-  <button onclick="schematicMap.changeZoom(1)">ZOOM IN</button>
-  <button onclick="schematicMap.changeZoom(-1)">ZOOM OUT</button>
+<div style="position: absolute; left: 10px; top: 10px;">
+  <button style="padding: 10px 15px" onclick="schematicMap.changeZoom(1)">ZOOM IN</button>
+  <button style="padding: 10px 15px" onclick="schematicMap.changeZoom(-1)">ZOOM OUT</button>
 </div>
 <!--<div class="content" style="display: flex; flex-direction: column; justify-content: center; align-items: center; width: 100vw; height: 100vh; background-color: #f8f8f8; border: 0px solid red">
   <div class="main-container" style="border: 0px solid red; display: flex; flex-direction: column; justify-content: center; align-items: center; width: 100%; height: 100%">-->
