ปรับโค้ด schematic_map_full.html

--- a/assets/server/schematic_map_full.html
+++ b/assets/server/schematic_map_full.html
@@ -5088,7 +5088,7 @@
 
       this.svgWrapper.css('left', newLeft);
       this.svgWrapper.css('top', newTop);
-      this.svgWrapper.hide().show(0); // refresh
+      //this.svgWrapper.hide().show(0); // refresh
     }
   }
 </script>
