ปรับโค้ด schematic_map_full.html

--- a/assets/server/schematic_map_full.html
+++ b/assets/server/schematic_map_full.html
@@ -5113,7 +5113,7 @@
 
     svgWrapper.onmousedown = schematicMap.handleTouchStart;
     svgWrapper.onmousemove = schematicMap.handleTouchMove;
-    svgWrapper.onmouseup = schematicMap.handleTouchEnd;
+    document.onmouseup = schematicMap.handleTouchEnd;
   });
 </script>
 </body>
