--- a/assets/server/schematic_map_full.html
+++ b/assets/server/schematic_map_full.html
@@ -4704,7 +4704,7 @@
 			</g>
 		</g>
 	</g>
-          <g id="logo" transform="translate(-150 550)">
+          <g id="logo" transform="translate(-200 620)">
 		<g>
 			<path class="st82" d="M4045.1,258.7h362.2c27.6,0,50,22.4,50,50v587.5c0,27.6-22.4,50-50,50h-362.2c-27.6,0-50-22.4-50-50V308.7
 				C3995.1,281.1,4017.5,258.7,4045.1,258.7z"/>
@@ -5049,7 +5049,7 @@
         newTop = this.svgContainer.height() - svgWrapperNewSize.height;
       }
 
-      if (this.scale === 1.3) {
+      if (this.scale === 1.3) { // fit
         newLeft = -0.18 * svgWrapperNewSize.width;
         newTop = -0.13 * svgWrapperNewSize.height;
       }
@@ -5058,7 +5058,6 @@
       this.svgWrapper.css('top', newTop);
 
       this.drawMapMarker();
-      //this.adjustWrapperPosition();
     };
 
     function handleTouchStart(evt) {
@@ -5159,7 +5158,7 @@
   $(function () {
     schematicMap = new SchematicMap(1);
 
-    $('#logo').hide();
+    //$('#logo').hide();
     $("#cb-toggle-cctv").change(function () {
       schematicMap.setCctvVisible(this.checked);
     });
