ปรับโค้ด schematic_map_full.html

--- a/assets/server/schematic_map_full.html
+++ b/assets/server/schematic_map_full.html
@@ -4964,6 +4964,8 @@
     }
 
     this.setCctvVisible = visible => {
+      fetchCctv();
+      
       this.showCctv = visible;
       this.drawMapMarker();
     };
